feat: updated the service-section

--- a/index.html
+++ b/index.html
@@ -64,6 +64,97 @@
                 </div>
             </div>
         </header>
+
+        <main>
+            <section class="section-services">
+                <div class="services__text">
+                    <h4 class="services__text-primary">
+                        Find the right doctor right at your fingertips
+                    </h4>
+                    <p class="services__text-secondary">
+                        Homnics gives the tools and information to 
+                    </p>
+
+                    <div class="services__text-info">
+                        <div class="services__info">
+                            <img src="./img/Check.svg" alt="icon" class="services__info-icon">
+                            <div class="services__info-text">
+                                <h4 class="services__info-text-primary">
+                                    Search nearest hospital
+                                </h4>
+                                <p class="services__info-text-secondary">
+                                    Find doctors and hospitals  based on the factors that matter most to you.
+                                </p>
+                            </div>
+                        </div>
+                        <div class="services__info">
+                            <img src="./img/Check.svg" alt="icon" class="services__info-icon">
+                            <div class="services__info-text">
+                                <h4 class="services__info-text-primary">
+                                    Search nearest hospital
+                                </h4>
+                                <p class="services__info-text-secondary">
+                                    Find doctors and hospitals  based on the factors that matter most to you.
+                                </p>
+                            </div>
+                        </div>
+                        <div class="services__info">
+                            <img src="./img/Check.svg" alt="icon" class="services__info-icon">
+                            <div class="services__info-text">
+                                <h4 class="services__info-text-primary">
+                                    Search nearest hospital
+                                </h4>
+                                <p class="services__info-text-secondary">
+                                    Find doctors and hospitals  based on the factors that matter most to you.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="services__form">
+                    <div class="services__form-input">
+                        <div class="services__form-input-group">
+                            <div class="services__form-input-group-prepend">
+                                <div class="services__form-input-group-text">@</div>
+                            </div>
+                            <input type="text" class="services__form-control" placeholder="Doctor/Hospital">
+                        </div>
+                    </div>
+
+                    <div class="services__form-input">
+                        <div class="services__form-input-group">
+                            <div class="services__form-input-group-prepend">
+                                <div class="services__form-input-group-text">@</div>
+                            </div>
+                            <input type="text" class="services__form-control" placeholder="Your Location">
+                        </div>
+                    </div>
+
+                    <div class="services__form-btn">
+                        <a href="" class="btn btn--primary services__search-btn">
+                            <img src="./img/search.svg" alt="" class="services__search-btn-icon">
+                            Search
+                        </a>
+                    </div>
+                </div>
+                <figure class="services__image">
+                    <img src="./img/doc-service.png" alt="" class="services__image--img">
+                </figure>
+            </section>
+
+            <section class="section-service">
+                <div class="service">
+                    <div class="service__text">
+                        <h4 class="service__text-primary">
+                            Services
+                        </h4>
+                        <p class="service__text-secondary">
+                            Consulting a doctor who speaks your language gives you peace of mind and contributes to better care.
+                        </p>
+                    </div>
+                </div>
+            </section>
+        </main>
     </div>
 
     <script src="https://cdn.jsdelivr.net/gh/jquery/jquery@3.2.1/dist/jquery.min.js"></script>
