feat: adds subscribe section

--- a/index.html
+++ b/index.html
@@ -152,6 +152,59 @@
                             Consulting a doctor who speaks your language gives you peace of mind and contributes to better care.
                         </p>
                     </div>
+
+                    <div class="service__items">
+                        <div class="service__box">
+                            <div class="service__box-img">
+                                <img src="./img/consultation.png" alt="" class="service__box-img-icon">
+                            </div>
+                            <div class="service__box-title">
+                                <p>Consultations</p>
+                            </div>
+                        </div>
+                        <div class="service__box">
+                            <div class="service__box-img">
+                                <img src="./img/diagnostic.svg" alt="" class="service__box-img-icon">
+                            </div>
+                            <div class="service__box-title">
+                                <p>Diagnostics</p>
+                            </div>
+                        </div>
+                        <div class="service__box">
+                            <div class="service__box-img">
+                                <img src="./img/dental.svg" alt="" class="service__box-img-icon">
+                            </div>
+                            <div class="service__box-title">
+                                <p>Dental Care</p>
+                            </div>
+                        </div>
+                        <div class="service__box">
+                            <div class="service__box-img">
+                                <img src="./img/eye.svg" alt="" class="service__box-img-icon">
+                            </div>
+                            <div class="service__box-title">
+                                <p>Eye Care</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+            <section class="section-subscribe">
+                <div class="subscribe">
+                    <div class="subscribe__text">
+                        <h4 class="heading-secondary">Subscribe for any news update and health tips from Homnics</h4>
+                    </div>
+                    <div class="subscribe__form">
+                        <div class="services__form-input subscribe__form-input">
+                            <div class="services__form-input-group">
+                                <input type="text" class="services__form-control" placeholder="Enter your email address">
+                            </div>
+                        </div>
+                        <div class="services__form-btn subscribe__form-btn">
+                            <a href="" class="btn btn--primary subscribe-btn">Subscribe</a>
+                        </div>
+                    </div>
                 </div>
             </section>
         </main>
