--- a/index.html
+++ b/index.html
@@ -8,10 +8,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/style-c.css">
     <link rel="stylesheet" href="css/theme.css">
-    <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/wrick17/calendar-plugin@master/style.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/wrick17/calendar-plugin@master/theme.css">
-     -->
-    <title>Document</title>
+    <title>Homnics</title>
 </head>
 <body>
     <div class="container">
