feat: adds page footer

--- a/index.html
+++ b/index.html
@@ -208,6 +208,70 @@
                 </div>
             </section>
         </main>
+
+        <footer class="footer">
+            <div class="footer__link">
+                <div class="footer__item">
+                    <h4 class="footer__item-header">Company</h4>
+                    <ul class="footer__list">
+                        <li class="footer__list-item"><a href="#" class="footer__list-item--link">Home</a></li>
+                        <li class="footer__list-item"><a href="#" class="footer__list-item--link">Our Company</a></li>
+                        <li class="footer__list-item"><a href="#" class="footer__list-item--link">Team</a></li>
+                        <li class="footer__list-item"><a href="#" class="footer__list-item--link">Individual Health Plan</a></li>
+                        <li class="footer__list-item"><a href="#" class="footer__list-item--link">Corporate Health Plan</a></li>
+                        <li class="footer__list-item"><a href="#" class="footer__list-item--link">FAQs</a></li>
+                    </ul>
+                </div>
+                <div class="footer__item">
+                    <h4 class="footer__item-header">For Patients</h4>
+                    <ul class="footer__list">
+                        <li class="footer__list-item"><a href="#" class="footer__list-item--link">Search for Doctors</a></li>
+                        <li class="footer__list-item"><a href="#" class="footer__list-item--link">Login</a></li>
+                        <li class="footer__list-item"><a href="#" class="footer__list-item--link">Signup</a></li>
+                        <li class="footer__list-item"><a href="#" class="footer__list-item--link">Booking</a></li>
+                    </ul>
+                </div>
+                <div class="footer__item">
+                    <h4 class="footer__item-header">For Doctors</h4>
+                    <ul class="footer__list">
+                        <li class="footer__list-item"><a href="#" class="footer__list-item--link">Appointments</a></li>
+                        <li class="footer__list-item"><a href="#" class="footer__list-item--link">Login</a></li>
+                        <li class="footer__list-item"><a href="#" class="footer__list-item--link">Signup</a></li>
+                    </ul>
+                </div>
+                <div class="footer__item">
+                    <h4 class="footer__item-header">For Institutions</h4>
+                    <ul class="footer__list">
+                        <li class="footer__list-item"><a href="#" class="footer__list-item--link">Appointments</a></li>
+                        <li class="footer__list-item"><a href="#" class="footer__list-item--link">Login</a></li>
+                        <li class="footer__list-item"><a href="#" class="footer__list-item--link">Signup</a></li>
+                    </ul>
+                </div>
+                <div class="footer__item footer__item--contact">
+                    <h4 class="footer__item-header">Contact</h4>
+                    <p class="footer__item-address">No 40 New Market Road, Nsukka, Enugu State, Nigeria.</p>
+                    <p class="footer__item-phone">+234 703 751 3959</p>
+                    <p class="footer__item-whatsapp">
+                        <a href="#" class="footer__whatsapp--link">
+                            <img src="./img/whatsapp.svg" alt="facebook" class="footer__item-whatsapp-img">
+                            Chat with us
+                        </a>
+                    </p>
+                    <p class="footer__item-email">support@homnics.com</p>
+                </div>
+            </div>
+        
+            <div class="footer__social">
+                <a href="https://facebook.com/ahegel" class="footer__social--fb"><img src="./img/fb.svg" alt="facebook" class="footer__social--fb-img"></a>
+                <a href="https://twitter.com/ahegel" class="footer__social--tw"><img src="./img/twitter.svg" alt="twitter" class="footer__social--tw-img"></a>
+                <a href="https://instagram.com/ahegel" class="footer__social--ig"><img src="./img/ig.svg" alt="instagram" class="footer__social--ig-img"></a>
+                <a href="https://youtube.com/ahegel" class="footer__social--yt"><img src="./img/youtube.svg" alt="youtube" class="footer__social--yt-img"></a>
+            </div>
+
+            <div class="footer__text">
+                <p>&copy; 2022 Homnics. All rights reserved.</p>
+            </div>
+        </footer>
     </div>
 
     <script src="https://cdn.jsdelivr.net/gh/jquery/jquery@3.2.1/dist/jquery.min.js"></script>
