--- a/index.html
+++ b/index.html
@@ -187,6 +187,20 @@
                 </div>
             </section>
 
+            <section class="section-app">
+                <div class="section-app__text">
+                    <h3 class="section-app__text--title">Your Health, Our Priority</h3>
+                    <p class="section-app__text--description">Always be in the know about your wellbeing, anywhere...anytime...</p>
+                    <div class="section-app__text--icon">
+                        <img src="./img/playstore.svg" alt="playstore">
+                        <img src="./img/applestore.svg" alt="applestore">
+                    </div>
+                </div>
+                <div class="section-app__img">
+                    <img src="./img/mobile-app.svg" alt="" class="section-app__img-1">
+                </div>
+            </section>
+
             <section class="section-subscribe">
                 <div class="subscribe">
                     <div class="subscribe__text">
