feat: adds plan section to home

--- a/index.html
+++ b/index.html
@@ -187,6 +187,247 @@
                 </div>
             </section>
 
+            <div class="section-healthplan">
+                <div class="healthplan">
+                    <div class="healthplan__text">
+                        <h4 class="healthplan__text--primary">
+                            Health Plans
+                        </h4>
+
+                        <div class="healthplan__text-toggle">
+                            <label class="toggle" for="toggleId">
+                                <h6 class="toggle__left">Pay-on-the-go</h6>
+                                <input type="checkbox" class="toggle__input" id="toggleId" />
+                                <span class="toggle-track">
+                                    <span class="toggle-indicator"></span>
+                                </span>
+                                <h6 class="toggle__right">Subscribe & Save</h6>
+                            </label>
+                        </div>
+                    </div>
+
+                    <div class="healthplan__tabset">
+                        <input type="radio" name="tabset" id="tab1" aria-controls="monthly" checked>
+                        <label for="tab1">Monthly</label>
+                        <input type="radio" name="tabset" id="tab2" aria-controls="quarterly">
+                        <label for="tab2">Quarterly</label>
+                        <input type="radio" name="tabset" id="tab3" aria-controls="annually">
+                        <label for="tab3">Annually</label>
+                        
+                        <div class="healthplan__tabset-panels">
+                            <section id="monthly" class="healthplan__tabset-panel">
+                                <div class="plan-container">
+                                    <div class="plan-card">
+                                        <div class="plan-card__heading">
+                                            <h4 class="plan-card__heading--title">
+                                                Individual
+                                            </h4>
+                                            <p class="plan-card__heading--description">
+                                                <span>N3,000</span> per person
+                                            </p>
+                                        </div>
+                                        <ul class="plan-card__list">
+                                            <li class="plan-card__list--item">Outpatient Care</li>
+                                            <li class="plan-card__list--item">Outpatient Care</li>
+                                            <li class="plan-card__list--item">Outpatient Care</li>
+                                        </ul>
+                                        <div class="plan-card__link-item">
+                                            <a href="#" class="plan-card__link">more benefits</a>
+                                        </div>
+                                        <div class="plan-card__btn">
+                                            <a href="" class="btn btn--primary subscribe-btn">Subscribe</a>
+                                        </div>
+                                    </div>
+                                    <div class="plan-card">
+                                        <div class="plan-card__heading">
+                                            <h4 class="plan-card__heading--title">
+                                                Family
+                                            </h4>
+                                            <p class="plan-card__heading--description">
+                                                <span>N3,000</span> per person
+                                            </p>
+                                        </div>
+                                        <ul class="plan-card__list">
+                                            <li class="plan-card__list--item">Outpatient Care</li>
+                                            <li class="plan-card__list--item">Outpatient Care</li>
+                                            <li class="plan-card__list--item">Outpatient Care</li>
+                                            <li class="plan-card__list--item">Outpatient Care</li>
+                                        </ul>
+                                        <div class="plan-card__link-item">
+                                            <a href="#" class="plan-card__link">more benefits</a>
+                                        </div>
+                                        <div class="plan-card__btn">
+                                            <a href="" class="btn btn--primary subscribe-btn">Subscribe</a>
+                                        </div>
+                                    </div>
+                                    <div class="plan-card">
+                                        <div class="plan-card__heading">
+                                            <h4 class="plan-card__heading--title">
+                                                Group
+                                            </h4>
+                                            <p class="plan-card__heading--description">
+                                                <span>N3,000</span> per person
+                                            </p>
+                                        </div>
+                                        <ul class="plan-card__list">
+                                            <li class="plan-card__list--item">Outpatient Care</li>
+                                            <li class="plan-card__list--item">Outpatient Care</li>
+                                            <li class="plan-card__list--item">Outpatient Care</li>
+                                            <li class="plan-card__list--item">Outpatient Care</li>
+                                        </ul>
+                                        <div class="plan-card__link-item">
+                                            <a href="#" class="plan-card__link">more benefits</a>
+                                        </div>
+                                        <div class="plan-card__btn">
+                                            <a href="" class="btn btn--primary subscribe-btn">Subscribe</a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </section>
+                            <section id="quarterly" class="healthplan__tabset-panel">
+                                <div class="plan-container">
+                                    <div class="plan-card">
+                                        <div class="plan-card__heading">
+                                            <h4 class="plan-card__heading--title">
+                                                Individual (Quater)
+                                            </h4>
+                                            <p class="plan-card__heading--description">
+                                                <span>N3,000</span> per person
+                                            </p>
+                                        </div>
+                                        <ul class="plan-card__list">
+                                            <li class="plan-card__list--item">Outpatient Care</li>
+                                            <li class="plan-card__list--item">Outpatient Care</li>
+                                            <li class="plan-card__list--item">Outpatient Care</li>
+                                        </ul>
+                                        <div class="plan-card__link-item">
+                                            <a href="#" class="plan-card__link">more benefits</a>
+                                        </div>
+                                        <div class="plan-card__btn">
+                                            <a href="" class="btn btn--primary subscribe-btn">Subscribe</a>
+                                        </div>
+                                    </div>
+                                    <div class="plan-card">
+                                        <div class="plan-card__heading">
+                                            <h4 class="plan-card__heading--title">
+                                                Family (Quater)
+                                            </h4>
+                                            <p class="plan-card__heading--description">
+                                                <span>N3,000</span> per person
+                                            </p>
+                                        </div>
+                                        <ul class="plan-card__list">
+                                            <li class="plan-card__list--item">Outpatient Care</li>
+                                            <li class="plan-card__list--item">Outpatient Care</li>
+                                            <li class="plan-card__list--item">Outpatient Care</li>
+                                            <li class="plan-card__list--item">Outpatient Care</li>
+                                        </ul>
+                                        <div class="plan-card__link-item">
+                                            <a href="#" class="plan-card__link">more benefits</a>
+                                        </div>
+                                        <div class="plan-card__btn">
+                                            <a href="" class="btn btn--primary subscribe-btn">Subscribe</a>
+                                        </div>
+                                    </div>
+                                    <div class="plan-card">
+                                        <div class="plan-card__heading">
+                                            <h4 class="plan-card__heading--title">
+                                                Group (Quater)
+                                            </h4>
+                                            <p class="plan-card__heading--description">
+                                                <span>N3,000</span> per person
+                                            </p>
+                                        </div>
+                                        <ul class="plan-card__list">
+                                            <li class="plan-card__list--item">Outpatient Care</li>
+                                            <li class="plan-card__list--item">Outpatient Care</li>
+                                            <li class="plan-card__list--item">Outpatient Care</li>
+                                            <li class="plan-card__list--item">Outpatient Care</li>
+                                        </ul>
+                                        <div class="plan-card__link-item">
+                                            <a href="#" class="plan-card__link">more benefits</a>
+                                        </div>
+                                        <div class="plan-card__btn">
+                                            <a href="" class="btn btn--primary subscribe-btn">Subscribe</a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </section>
+                            <section id="annually" class="healthplan__tabset-panel">
+                                <div class="plan-container">
+                                    <div class="plan-card">
+                                        <div class="plan-card__heading">
+                                            <h4 class="plan-card__heading--title">
+                                                Individual (Anual)
+                                            </h4>
+                                            <p class="plan-card__heading--description">
+                                                <span>N3,000</span> per person
+                                            </p>
+                                        </div>
+                                        <ul class="plan-card__list">
+                                            <li class="plan-card__list--item">Outpatient Care</li>
+                                            <li class="plan-card__list--item">Outpatient Care</li>
+                                            <li class="plan-card__list--item">Outpatient Care</li>
+                                        </ul>
+                                        <div class="plan-card__link-item">
+                                            <a href="#" class="plan-card__link">more benefits</a>
+                                        </div>
+                                        <div class="plan-card__btn">
+                                            <a href="" class="btn btn--primary subscribe-btn">Subscribe</a>
+                                        </div>
+                                    </div>
+                                    <div class="plan-card">
+                                        <div class="plan-card__heading">
+                                            <h4 class="plan-card__heading--title">
+                                                Family (Anual)
+                                            </h4>
+                                            <p class="plan-card__heading--description">
+                                                <span>N3,000</span> per person
+                                            </p>
+                                        </div>
+                                        <ul class="plan-card__list">
+                                            <li class="plan-card__list--item">Outpatient Care</li>
+                                            <li class="plan-card__list--item">Outpatient Care</li>
+                                            <li class="plan-card__list--item">Outpatient Care</li>
+                                            <li class="plan-card__list--item">Outpatient Care</li>
+                                        </ul>
+                                        <div class="plan-card__link-item">
+                                            <a href="#" class="plan-card__link">more benefits</a>
+                                        </div>
+                                        <div class="plan-card__btn">
+                                            <a href="" class="btn btn--primary subscribe-btn">Subscribe</a>
+                                        </div>
+                                    </div>
+                                    <div class="plan-card">
+                                        <div class="plan-card__heading">
+                                            <h4 class="plan-card__heading--title">
+                                                Group (Anual)
+                                            </h4>
+                                            <p class="plan-card__heading--description">
+                                                <span>N3,000</span> per person
+                                            </p>
+                                        </div>
+                                        <ul class="plan-card__list">
+                                            <li class="plan-card__list--item">Outpatient Care</li>
+                                            <li class="plan-card__list--item">Outpatient Care</li>
+                                            <li class="plan-card__list--item">Outpatient Care</li>
+                                            <li class="plan-card__list--item">Outpatient Care</li>
+                                        </ul>
+                                        <div class="plan-card__link-item">
+                                            <a href="#" class="plan-card__link">more benefits</a>
+                                        </div>
+                                        <div class="plan-card__btn">
+                                            <a href="" class="btn btn--primary subscribe-btn">Subscribe</a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </section>
+                        </div>
+                        
+                      </div>
+                </div>
+            </div>
+
             <section class="section-app">
                 <div class="section-app__text">
                     <h3 class="section-app__text--title">Your Health, Our Priority</h3>
