--- a/index.html
+++ b/index.html
@@ -28,15 +28,71 @@
                 <li class="navigation__item navigation__item-hover">
                     <a href="#" class="navigation__link">About</a>
                     <ul class="navigation__dropdown">
-                        <li class="navigation__item navigation__item-hover"><a href="#" class="navigation__link">Our Company</a></li>
-                        <li class="navigation__item navigation__item-hover"><a href="#" class="navigation__link">Our Team</a></li>
+                        <li class="navigation__item">
+                            <a href="#" class="navigation__link">
+                                <div class="dropdown-container">
+                                    <img src="./img/building.svg" alt="icon" class="dropdown-container-icon">
+                                    <div class="dropdown-container-text">
+                                        <h4 class="dropdown-container-text-primary">
+                                            Our Company
+                                        </h4>
+                                        <p class="dropdown-container-text-secondary">
+                                            Learn about us, our mission and vision
+                                        </p>
+                                    </div>
+                                </div>
+                            </a>
+                        </li>
+                        <li class="navigation__item">
+                            <a href="#" class="navigation__link">
+                                <div class="dropdown-container">
+                                    <img src="./img/people.svg" alt="icon" class="dropdown-container-icon">
+                                    <div class="dropdown-container-text">
+                                        <h4 class="dropdown-container-text-primary">
+                                            Our team
+                                        </h4>
+                                        <p class="dropdown-container-text-secondary">
+                                            Learn about us, our mission and vision
+                                        </p>
+                                    </div>
+                                </div>
+                            </a>
+                        </li>
                     </ul>
                 </li>
                 <li class="navigation__item navigation__item-hover">
                     <a href="#" class="navigation__link">Health Plans</a>
                     <ul class="navigation__dropdown">
-                        <li class="navigation__item navigation__item-hover"><a href="#" class="navigation__link">Individual Plan</a></li>
-                        <li class="navigation__item navigation__item-hover"><a href="#" class="navigation__link">Corporate Plan</a></li>
+                        <li class="navigation__item">
+                            <a href="#" class="navigation__link">
+                                <div class="dropdown-container">
+                                    <img src="./img/building.svg" alt="icon" class="dropdown-container-icon">
+                                    <div class="dropdown-container-text">
+                                        <h4 class="dropdown-container-text-primary">
+                                            Individual Plan
+                                        </h4>
+                                        <p class="dropdown-container-text-secondary">
+                                            Affordable health insurance for you & your family
+                                        </p>
+                                    </div>
+                                </div>
+                            </a>
+                        </li>
+                        <li class="navigation__item">
+                            <a href="#" class="navigation__link">
+                                <div class="dropdown-container">
+                                    <img src="./img/people.svg" alt="icon" class="dropdown-container-icon">
+                                    <div class="dropdown-container-text">
+                                        <h4 class="dropdown-container-text-primary">
+                                            Corporate Plan
+                                        </h4>
+                                        <p class="dropdown-container-text-secondary">
+                                            The right plan for your business
+                                        </p>
+                                    </div>
+                                </div>
+                            </a>
+                        </li>
                     </ul>
                 </li>
                 <li class="navigation__item navigation__item-hover"><a href="#" class="navigation__link">Partners</a></li>
@@ -187,7 +243,7 @@
                 </div>
             </section>
 
-            <div class="section-healthplan">
+            <section class="section-healthplan">
                 <div class="healthplan">
                     <div class="healthplan__text">
                         <h4 class="healthplan__text--primary">
@@ -426,7 +482,66 @@
                         
                       </div>
                 </div>
-            </div>
+            </section>
+
+            <section class="section-partners">
+                <div class="partners">
+                    <div class="partners__title">
+                        <h4 class="partners__title--primary">
+                            Our Partners
+                        </h4>
+                    </div>
+
+                    <div class="partner__container">
+                        <div class="slider">
+                            <div class="slide-track">
+                                <div class="slide">
+                                    <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/557257/1.png" height="100" width="250" alt="" />
+                                </div>
+                                <div class="slide">
+                                    <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/557257/2.png" height="100" width="250" alt="" />
+                                </div>
+                                <div class="slide">
+                                    <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/557257/3.png" height="100" width="250" alt="" />
+                                </div>
+                                <div class="slide">
+                                    <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/557257/4.png" height="100" width="250" alt="" />
+                                </div>
+                                <div class="slide">
+                                    <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/557257/5.png" height="100" width="250" alt="" />
+                                </div>
+                                <div class="slide">
+                                    <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/557257/6.png" height="100" width="250" alt="" />
+                                </div>
+                                <div class="slide">
+                                    <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/557257/7.png" height="100" width="250" alt="" />
+                                </div>
+                                <div class="slide">
+                                    <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/557257/1.png" height="100" width="250" alt="" />
+                                </div>
+                                <div class="slide">
+                                    <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/557257/2.png" height="100" width="250" alt="" />
+                                </div>
+                                <div class="slide">
+                                    <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/557257/3.png" height="100" width="250" alt="" />
+                                </div>
+                                <div class="slide">
+                                    <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/557257/4.png" height="100" width="250" alt="" />
+                                </div>
+                                <div class="slide">
+                                    <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/557257/5.png" height="100" width="250" alt="" />
+                                </div>
+                                <div class="slide">
+                                    <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/557257/6.png" height="100" width="250" alt="" />
+                                </div>
+                                <div class="slide">
+                                    <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/557257/7.png" height="100" width="250" alt="" />
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
 
             <section class="section-app">
                 <div class="section-app__text">
