chore: updates home design

--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
                     </div>
                 </div>
                 <figure class="services__image">
-                    <img src="./img/doc-service.png" alt="" class="services__image--img">
+                    <img src="./img/doc-service.svg" alt="" class="services__image--img">
                 </figure>
             </section>
 
@@ -572,6 +572,7 @@
                             <a href="" class="btn btn--primary subscribe-btn">Subscribe</a>
                         </div>
                     </div>
+                    <img src="./img/subscribe-background.svg" class="subscribe__img" alt="">
                 </div>
             </section>
         </main>
