--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     <a href="#" class="navigation__link">About</a>
                     <ul class="navigation__dropdown">
                         <li class="navigation__item">
-                            <a href="#" class="navigation__link">
+                            <a href="about.html" class="navigation__link">
                                 <div class="dropdown-container">
                                     <img src="./img/building.svg" alt="icon" class="dropdown-container-icon">
                                     <div class="dropdown-container-text">
@@ -44,7 +44,7 @@
                             </a>
                         </li>
                         <li class="navigation__item">
-                            <a href="#" class="navigation__link">
+                            <a href="about-team.html" class="navigation__link">
                                 <div class="dropdown-container">
                                     <img src="./img/people.svg" alt="icon" class="dropdown-container-icon">
                                     <div class="dropdown-container-text">
