--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             </label>
 
             <ul class="navigation__list">
-                <li class="navigation__item navigation__item-hover"><a href="#" class="navigation__link">Home</a></li>
+                <li class="navigation__item navigation__item-hover"><a href="index.html" class="navigation__link">Home</a></li>
                 <li class="navigation__item navigation__item-hover">
                     <a href="#" class="navigation__link">About</a>
                     <ul class="navigation__dropdown">
