--- a/individualplan.html
+++ b/individualplan.html
@@ -181,7 +181,7 @@
                       <div class="table1">
                         <h3>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Individual</h3>
                         <h2>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;N3000<span class="per">per person</span></h2>
-                    Outpatient Care</br>
+                    Outpatient Care,</br>
                     Outpatient Care</br>
                     Outpatient Care</br>
                     Outpatient Care</br>
