--- a/corporateplan.html
+++ b/corporateplan.html
@@ -67,7 +67,7 @@
                     <a href="#" class="navigation__link">Health Plans</a>
                     <ul class="navigation__dropdown">
                         <li class="navigation__item">
-                            <a href="#" class="navigation__link">
+                            <a href="individualplan.html" class="navigation__link">
                                 <div class="dropdown-container">
                                     <img src="./img/building.svg" alt="icon" class="dropdown-container-icon">
                                     <div class="dropdown-container-text">
@@ -82,7 +82,7 @@
                             </a>
                         </li>
                         <li class="navigation__item">
-                            <a href="#" class="navigation__link">
+                            <a href="corporateplan.html" class="navigation__link">
                                 <div class="dropdown-container">
                                     <img src="./img/people.svg" alt="icon" class="dropdown-container-icon">
                                     <div class="dropdown-container-text">
@@ -115,7 +115,9 @@
                     <p class="heading-secondary">
                         Your employees will be happier and healthier on our health insurance plans
                     </p>
-                    <a href="#" class="corporate-btn btn--primary btn--animated corporate_btn-text  corporate__button-primary">Get a quote</a>
+                    <a href="#"
+                        class="corporate-btn btn--primary btn--animated corporate_btn-text  corporate__button-primary">Get
+                        a quote</a>
                 </div>
 
             </div>
