--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             </label>
 
             <ul class="navigation__list">
-                <li class="navigation__item navigation__item-hover"><a href="index.html" class="navigation__link">Home</a></li>
+                <li class="navigation__item navigation__item-hover"><a href="" class="navigation__link">Home</a></li>
                 <li class="navigation__item navigation__item-hover">
                     <a href="#" class="navigation__link">About</a>
                     <ul class="navigation__dropdown">
@@ -64,11 +64,11 @@
                     <a href="#" class="navigation__link">Health Plans</a>
                     <ul class="navigation__dropdown">
                         <li class="navigation__item">
-                            <a href="#" class="navigation__link">
+                            <a href="individualplan.html" class="navigation__link">
                                 <div class="dropdown-container">
                                     <img src="./img/building.svg" alt="icon" class="dropdown-container-icon">
                                     <div class="dropdown-container-text">
-                                        <h4 class="dropdown-container-text-primary">
+                                        <h4 class="dropdown-container-text-primary" >
                                             Individual Plan
                                         </h4>
                                         <p class="dropdown-container-text-secondary">
@@ -79,7 +79,7 @@
                             </a>
                         </li>
                         <li class="navigation__item">
-                            <a href="#" class="navigation__link">
+                            <a href="corporateplan.html" class="navigation__link">
                                 <div class="dropdown-container">
                                     <img src="./img/people.svg" alt="icon" class="dropdown-container-icon">
                                     <div class="dropdown-container-text">
